# gardenTracker

./: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.jsonc
migrations/: 0001_initial_schema.sql
src/: app.py  auth.py  config.py  db.py  entry.py  models.py  plant_form.py  plant_status.py  plants.py  ui.py
src/assets/: styles.css
src/routes/: __init__.py  auth.py  dashboard.py  plants.py  system.py
src/templates/: base.html  dashboard.html  error.html  home.html  login.html  plant_form.html
tests/: test_auth_helpers.py  test_models.py  test_plant_form.py  test_plant_status.py  worker_security.test.ts
worker/: auth.ts  config.ts  index.ts  plants.ts  render.ts
