[project]
name = "garden-dashboard-worker"
version = "0.1.0"
description = "Phase 0 Cloudflare Worker spike for the Garden Dashboard app."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "jinja2",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
